--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -155,7 +155,7 @@
         <div class="main-sidebar">
           <div class="sidebar">
             <div style="width:100%;border-bottom:1px solid #999">
-              <label><b>UPLOAD </b></label>
+              <label><b>TARGET UPLOAD</b></label>
 			 </div> 
 			 <div style="width:100%;">
               <label>Max Limit (K/M)</label>
@@ -182,7 +182,7 @@
           </div>
           <div class="sidebar2">
             <div style="width:100%;border-bottom:1px solid #999">
-              <label><b>DOWNLOAD</b></label>
+              <label><b>TARGET DOWNLOAD</b></label>
 			  </div>
 			 <div style="width:100%;"> 
               <label>Max Limit (K/M)</label>
