--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -139,7 +139,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1><span style="color:#ff6600">WIFI.ID WMS</span> AND <span style="color:#ff6600">SEAMLESS</span> AUTO LOGIN SCRIPT GENERATOR FOR MIKROTIK ROUTEROS</h1>
+        <h1><span style="color:#ff6600">WIFI.ID WMS</span> AND <span style="color:#ff6600">SEAMLESS</span> AUTO LOGIN SCRIPT GENERATOR FOR MIKROTIK</h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
