--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -15,8 +15,10 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html">
     <script data-ad-client="ca-pub-9740800920365268" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script async defer src="https://buttons.github.io/buttons.js"></script>  
+    <script async defer src="https://buttons.github.io/buttons.js"></script> 
+	    <link rel="stylesheet" href="./login/login.css">
     <style>
+
       /* ---------------------------------------------------------------------
       ########################################################################
       # Mikrotik Notification Expired For Hotspot, PPPoE and Static-IP Generator
@@ -40,18 +42,10 @@
       * {
       box-sizing: border-box;
       }
-      .Menu{
-      width:100%;
-      border-bottom:1px solid #ccc;
-      height:100%;
-      padding-bottom: 15px;
-      margin-bottom: 20px;
-      font-weight:bold;
-      }
       #wrap{
-      width:1120px;
+      max-width:1024px;
       margin:0 auto;
-      padding:10px;
+      padding:0 5px 0 5px;
       }
       .logo {
       margin-top:10px;
@@ -78,7 +72,7 @@
       .content{
       flex:1;
       float:right;
-      width:800px;
+      width:65%;
       padding: 10px;
       border-top:1px solid #bbb;
       border-bottom:1px solid #bbb;
@@ -89,7 +83,7 @@
       }
       .sidebar{
       float:left;
-      width:300px;
+      width:35%;
       padding: 10px;
       background-color:#ddd;
       border:1px solid #bbb; 
@@ -109,7 +103,7 @@
       }	  
       h1 {
       color:#ddd;
-      font-size:24px;
+      font-size:25px;
       margin-bottom:5px;
       margin-top:10px;
       }
@@ -125,59 +119,19 @@
       a:active {
       color: #ff6600;
       }
-      .menu {
-      clear:both;
-      width:auto;
-      padding-bottom:13px;
-      }
-      .menu1 {
-      width:360px;
-      margin-bottom:1px;
-      font-weight:bold;
-      background-color:#4CAF50;
-      padding:6px;
-      color:white;
-      display: inline-block;
-      margin:0;
-      }
-      .menu1 a:link {
-      text-decoration:none;
-      color:white;
-      }
-      .menu1 a:visited{
-      text-decoration:none;
-      color:white;
-      }
-      .menu2 {
-      width:300px;
-      margin-bottom:1px;
-      font-weight:bold;
-      background-color:#bbb;
-      padding:6px;
-      color:white;
-      display: inline-block;
-      margin:0;
-      }
-      .menu2 a:link{
-      text-decoration:none;
-      color:white;
-      }
-      .menu2 a:visited{
-      text-decoration:none;
-      color:white;
-      }
       button {
       color: #fff;
       background-color: #ff6600;
       border-color: #ff6600;
       border:none;
       padding:7px;
-      width:200px;
-      font-size:15px !important;
+      width:100px;
+      font-size:14px !important;
       font-weight:bold;
       cursor: pointer;
       border-radius: 5px;
       color: #fff;
+	  margin-bottom:5px;
       }
       button:hover {
       background-color: #ccc;
@@ -188,12 +142,14 @@
       background-color: #111;
       border-color: #ff6600;
       border:none;
-      padding:7px;
-      width:180px;
+      padding:6px;
+      width:auto;
       font-size:14px !important;
       font-weight:bold;
       cursor: pointer;
       border-radius: 5px; 
+	  float:right;
+	  margin-bottom:15px; 
       }	
       .d-link:hover {
       background-color: #ccc;
@@ -244,36 +200,6 @@
       input[type=submit]:hover {
       background-color: #45a049;
       }
-      .col-25 {
-      float: left;
-      width: 25%;
-      margin-top: 6px;
-      }
-      .col-75 {
-      float: left;
-      width: 75%;
-      margin-top: 6px;
-      }
-      /* Clear floats after the columns */
-      .row:after {
-      content: "";
-      display: table;
-      clear: both;
-      }
-      .list-game {
-      height: 200px;
-      background:white;
-      overflow: scroll;
-      overflow-x: hidden;
-      width: 100%;
-      margin-top:2px;
-      padding: 3px;
-      border: 1px solid rgba(0,0,0,0.25);
-      }
-      .list-game label {
-      padding: 0;
-      display: inline-block;
-      } 
       .list-output-content {
       height: 300px;
       background:#fff;
@@ -298,44 +224,89 @@
       font-family: montserrat,sans-serif;
       border-radius: 5px; 
       }
-      table, tr, td {
-      border: none;
+    
+      .mikrotik-logo {display:none}	  
+      @media screen and (max-width:700px) {
+      .list-output-content{height:auto;}
+      .main-wrap{display:block}
+      .sidebar,.content{border-radius:5px;display:block;width:100%}
+      .sidebar{height:auto;margin-bottom:5px}
+      .header h1{max-width:100%;justify-content:center}
+	  .header {border:none}	  
+      .logo-left a{margin-top:10px!important;font-size:23px}
+      .logo-left img{height:40px;width:50px;margin-top:-5px!important}
+      h1{font-size:21px;text-align:center}
+      .mymenu{width:100%!important}
+      .logo{width:100%}
+      .logo-left{justify-content:center;display:flex;width:100%}
+      .logo-right{justify-content:center;width:100%;display:flex}
+      .footer{font-size:13px;padding-left:5px;padding-right:5px}
       }
+      @media screen and (max-width:600px) {
+	  button{margin-bottom:5px;}
+      h1{font-size:19px}
+      .logo-left a{margin-top:10px!important;font-size:20px}
+      .logo-left img{height:auto;width:40px;margin-top:-5px!important}
+      .sidebar{padding:10px}
+      .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
+      .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
+      .mymenu{padding-left:0;padding-right:0}
+      .mymenu ul{background:none!important;justify-content:center;display:flex}
+      }
+      @media screen and (max-width:500px) {
+      .show-homepage-menu{display:flex;justify-content:center;width:100%}
+      .avatar{display:none}
+      }
+      @media screen and (max-width:350px) {
+      .hide-homepage{display:none}
+      }  
     </style>
-    <link rel="stylesheet" href="./login/login.css">
+
   </head>
   <body>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.1/firebase-auth.js"></script>  
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0&appId=379827522913428&autoLogAppEvents=1" nonce="Esvux9Cl"></script> 
+    <div id="wrap">
     <div id="mymenu" class="mymenu">
+      <div class="mikrotik-logo" >
+        <img alt="mikrotik" src="./img/made-for-mikrotik.png">
+      </div>
       <ul>
         <li><a target="_blank" href="https://buananetpbun.github.io">HOME</a></li>
         <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
         <li><a href="javascript:callmodal()">DONATE</a></li>
-        <li><a target="_blank" href="https://fb.me/buananetmikrotik">CONTACT</a></li>
+        <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
       </ul>
-      <div id="homepage" class="hide">
-        <button style="width:100px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
-		<button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
-        <span class="avatar">
+      <div class="show-homepage-menu">
+        <div id="homepage" class="hide">
+          <button style="width:90px !important; padding:6px; margin:4px; margin-left:10px; margin-bottom:10px; font-weight:bold; font-size:14px" id="signout">Logout</button>
+          <button id="ShowProfile" style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px;" onclick="location.href = 'https://buananetpbun.github.io/login'">My Profile</button>
+          <span class="hide-homepage">
+          <span class="avatar">
           <img alt="avatar" id="myavatar" src="https://user-images.githubusercontent.com/42666125/199234814-c320e1fc-da95-489e-a955-43b82e3f4b46.png" >
-         </span>		
-        <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
-        <span style="font-weight:normal; font-size:14px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
+          </span>		
+          <span style="font-weight:normal;font-size:14px">Hi, <span style="color:#ff6600;font-weight:bold;" id="welcome-email"></span></span>
+          <span style="font-weight:normal; font-size:14px"> [<span id="email_Verified" title="E-mail verified status" style="cursor: help;"></span>]</span>
+          </span>
+        </div>
       </div>
     </div>
-    <div id="wrap">
       <div class="logo">
-        <a href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html"><img style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>
-        <div style="float:right">
-          <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
+        <div class="logo-right" style="float:right;">
+          <div style="float:right">
+            <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
+          </div>
+          <div style="float:right; margin-right:5px; margin-top:1px">
+            <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+          </div>
         </div>
-        <div style="float:right; margin-right:5px; margin-top:1px">
-          <div  class="fb-like" data-href="https://www.facebook.com/buananetmikrotik" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="false"></div>
+        <div class="logo-left" style="float:left;"> 
+          <a href="https://buananetpbun.github.io/mikrotik-expired-isolate-pppoe-hotspot.html"><img style="float:left; margin-top:-6px;margin-right:10px" height="40" width="50" src="./img/mylogo.png"><span style="color:#ff6600 !important">BuanaNETPBun</span>.Github.io</a>  
         </div>
       </div>
+      <div style="clear:both"></div>
       <div class="header">
         <h1>MIKROTIK ALL-IN-ONE <span style="color:#ff6600">NOTIFICATION EXPIRED FOR HOTSPOT, PPPOE AND STATIC IP</span></h1>
       </div>
@@ -401,9 +372,9 @@
             </table>
           </div>
           <br>
-          <button style="margin-right:10px;" type="button" onclick="myFunction()">Generate Script</button>
-          <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
-          <span style="float:right;margin-bottom:15px; margin-top:0px;padding-left:20px; font-size:14px" class="d-link"><a class="download" href="#" download="error.html">Download error.html</a></span><br>
+          <button style="margin-right:5px;" type="button" onclick="myFunction()">Generate</button>
+          <button id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
+          <span class="d-link"><a class="download" href="#" download="error.html">Save error.html</a></span><br>
           <div class="list-output-content2">
             <div style="text-align:center">
               <span id="msg-title" style="color:#fff; font-weight:bold; font-size:70px;">EXPIRED!</span><br>
@@ -416,15 +387,14 @@
         </div>
       </div>
       <div class="footer">
-        <div style="margin-top:0px;float:right">
+        <div style="margin-top:10px;">
           <span style="color:#ff6600; font-weight:bold">Tutorial How-To:</span><br>
           1. Download error.html and upload to winbox at "File" to webproxy Folder "webproxy/error.html"<br>
           2. For Enable isolation just set your Profile to "EXPIRED" at Hotspot or PPPoE on Winbox, Don't use<br>
           Expired for Hotspot Voucher, you can use only for Hotspot monthly.<br>
           3. You can set manual isolation for Static-IP, just input user IP at Firewall -> Address Lists -> EXPIRED<br>
-          <br>
-          <br>© Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         </div>
+		<div style="margin-top:20px;">
         <span style="color:#ff6600; font-weight:bold"># This Script for remove all Script from this Generator:</span><br>
         /ip proxy set enabled=no port=8080 max-cache-size=none <br>
         /ip pool remove [find comment="EXPIRED By BNT"]<br>
@@ -436,6 +406,10 @@
         /ip hotspot walled-garden ip remove [find comment="EXPIRED By BNT"]<br>
         /ip hotspot user profile remove [find name ="EXPIRED"]<br>
         /ip address remove [find comment="EXPIRED By BNT"]<br>
+		</div>
+	  <div style="width:100%; margin-top:20px">
+	  		© Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">BuanaNETPbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
+			</div>
       </div>
     </div>
       <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen"><div id="center-screen" class="center-screen">Great! One Step Again <br>For Activate Your Member<br><button id="verify">VERIFY YOUR E-MAIL NOW</button></div></div>
