--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -47,8 +47,7 @@
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
-      a:active{color:#f60}
-      button{margin-top:15px;color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:130px;font-size:15px;font-weight:700;display:inline-block;cursor:pointer;border-radius:5px;color:#fff}
+      a:active{color:#f60}      button{margin-top:14px;color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:130px;font-size:15px;font-weight:700;display:inline-block;cursor:pointer;border-radius:5px;color:#fff}
       button:hover{background-color:#ccc;color:#111}
       .row:after{content:"";display:table;clear:both}
       input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;margin-bottom:10px;margin-top:10px;font-size:16px!important;border-radius:5px}
