--- a/mikrotik-pcq-generator.html
+++ b/mikrotik-pcq-generator.html
@@ -18,15 +18,15 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>  
     <link rel="stylesheet" href="./login/login.css">
     <style>
-      /* --------------------------------------------
-      ####################################################################
-      # Mikrotik Queue Tree Script Generator Plus Bandwidth Shared (UpTo)
+      /* ------------------------------------------------------
+      #########################################################
+      # Mikrotik PCQ Generator For Queue Tree And Queue Simple 
       # Designer  : Agus Ramadhani / BuanaNET
       # Github    : https://buananetpbun.github.io
       # Site      : http://www.o-om.com
       # Sosmed    : https://fb.me/buananetmikrotik
-      ####################################################################
-      ----------------------------------------------- */  
+      ########################################################
+      ----------------------------------------------------- */  
       *{-webkit-transition:all .3s ease-in;-moz-transition:all .3s ease-in;-ms-transition:all .3s ease-in;transition:all .3s ease-in}
       body,div,span,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,textarea,p,blockquote,th,td,tr,table{margin:0;padding:0}
       body{font-size:15px;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";margin:0}
