--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -47,8 +47,7 @@
       a:link{color:#f60}
       a:visited{color:#f60}
       a:hover{color:#f60}
-      a:active{color:#f60}
-      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:6px;width:130px;font-weight:700;font-size:14px!important;cursor:pointer;border-radius:5px;color:#fff;margin-bottom:5px}
+      a:active{color:#f60}      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:6px;width:130px;font-weight:700;font-size:14px!important;cursor:pointer;border-radius:5px;color:#fff;margin-bottom:5px}
       button:hover{background-color:#ccc;color:#111}
       .row:after{content:"";display:table;clear:both}
       input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;margin-bottom:5px;font-size:15px!important;border-radius:5px}
@@ -125,7 +124,7 @@
       </div>
       <div class="logo">
         <div class="logo-right" style="float:right;">
-          <div style="float:right">
+          <div style="float:right; margin-right:5px;">
             <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
           </div>
           <div style="float:right; margin-right:5px; margin-top:1px">
