--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -53,7 +53,7 @@
       label{padding:5px 5px 5px 0;display:inline-block}
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right;border-radius:5px}
       input[type=submit]:hover{background-color:#45a049}
-      .list-output-content{height:513px;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px;white-space: nowrap;}
+      .list-output-content{height:513px;background:#fff;overflow:scroll;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
       .mikrotik-logo{display:none}
       @media screen and (max-width:700px) {
       .list-output-content{height:auto}
@@ -123,7 +123,7 @@
       </div>
       <div class="logo">
         <div class="logo-right" style="float:right;">
-          <div style="float:right">
+          <div style="float:right;margin-right:5px;">
             <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
           </div>
           <div style="float:right; margin-right:5px; margin-top:1px">
