--- a/pcc-calculation.html
+++ b/pcc-calculation.html
@@ -136,7 +136,7 @@
     </div>
       <div class="logo">
         <div class="logo-right" style="float:right;">
-          <div style="float:right">
+          <div style="float:right; margin-right:5px;">
             <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fbuananetpbun.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits">
           </div>
           <div style="float:right; margin-right:5px; margin-top:1px">
