--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -82,7 +82,7 @@
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{height:auto;width:40px;margin-top:-5px!important}
-      .sidebar{padding:10px}
+      .sidebar{padding:5px}
       .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%;clear:both}
       .mymenu{padding-left:0;padding-right:0}
@@ -92,6 +92,7 @@
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       .avatar{display:none}
       .routeros{width:100%}
+        table,tr,td {padding:0; margin:0; font-size:12px}
       }
       @media screen and (max-width:350px) {
       .hide-homepage{display:none}
