--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -59,6 +59,7 @@
       .list-output-content{height:auto;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:10px;margin-top:10px;border:1px solid #ccc;border-radius:5px;white-space:nowrap}
       .class-input{display:flex}
       .mac-input input,.mac-button button{display:inline-block;-webkit-appearance:none}
+	  .mikrotik-logo{display:none}
       @media screen and (max-width:768px) {
       .header h1{max-width:100%;justify-content:center;border-top:0!important}
       .header{border:none}
