--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -38,9 +38,9 @@
       .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
       .main-wrap{background-color:#f60}
       .content{float:right;width:100%;padding:10px;border-top:1px solid #bbb;background:#ddd;border-radius:0 0 5px 5px}
-      .sidebar{float:left;width:100%;padding:10px;background-color:#ddd;border-bottom:0 solid #bbb;border-radius:5px}
+      .sidebar{float:left;width:100%;padding:0px;background-color:#ddd;border-bottom:0 solid #bbb;border-radius:5px}
       .footer{font-size:13px;padding-top:15px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
-      h2{color:#f60}
+      h2{color:#f60; font-size:20px}
       h1{color:#ddd;font-size:23px;margin-bottom:10px;margin-top:10px}
       a:link{color:#f60}
       a:visited{color:#f60}
