--- a/mikrotik-bonding-interface.html
+++ b/mikrotik-bonding-interface.html
@@ -88,6 +88,7 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
+	  body, input, textarea, .chech-mikortik-a, .chech-mikortik-b {font-size:13px}
       .chech-mikortik-a{display:block}
       .chech-mikortik-b{display:block}
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
