--- a/port-knocking-icmp.html
+++ b/port-knocking-icmp.html
@@ -148,7 +148,6 @@
       border-radius: 5px; 
 	  display:inline-block;
 	  margin-left:20px;
-	  margin-top:15px;
       }	
       .d-link:hover {
       background-color: #ccc;
@@ -231,7 +230,7 @@
       .footer{font-size:13px;padding-left:5px;padding-right:5px}
       }
       @media screen and (max-width:600px) {
-	  .d-link {margin-left:0;}	  
+	  .d-link {margin-left:0;margin-top:15px;}	  
       button{margin-bottom:5px}
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
