--- a/remote-ip-public-static.html
+++ b/remote-ip-public-static.html
@@ -139,7 +139,7 @@
       <div class="sidebar">
         <div style="display:flex">
           <div style="width:100%;">
-            <label>Target Interface WAN ISP</label><br>
+            <label>Interface WAN ISP</label><br>
             <input type="text" id="input-interface-isp" value="ether2-Astinet" placeholder="ether2-Astinet" onkeyup="myFunction()" >
           </div>
           <div style="width:100%;margin-left:10px">
