--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -62,7 +62,7 @@
       .myImage{padding:0;margin:0}
 	  .mikrotik-logo {display:none}
       @media screen and (max-width:768px) {
-	   .content {overflow: scroll}
+	   .content {overflow-x: scroll}
       .list-output-content{height:auto}
       .main-wrap{display:block}
       .sidebar,.content{border-radius:5px;display:block;width:100%}
