--- a/mikrotik-qr-code-generator.html
+++ b/mikrotik-qr-code-generator.html
@@ -40,8 +40,8 @@
       #wrap{max-width:720px;margin:0 auto;padding:0 5px 0 5px}
       .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
       .main-wrap{display:flex}
-      .content{flex:1;float:right;padding:10px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
-      .sidebar{float:left;width:250px;background-color:#ddd;border:0 solid #bbb;height:auto;border-radius:5px 0 0 5px;padding:8px 20px 20px 30px}
+      .content{flex:1;float:right;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-left:1px solid #bbb;background:#ddd;border-radius:0 5px 5px 0}
+      .sidebar{float:left;width:250px;background-color:#ddd;border:0 solid #bbb;height:auto;border-radius:5px 0 0 5px;padding:15px}
       .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#ddd;font-size:22px;margin-bottom:10px;margin-top:10px}
@@ -65,7 +65,7 @@
 	   .content {overflow-x: scroll}
       .list-output-content{height:auto}
       .main-wrap{display:block}
-      .sidebar,.content{border-radius:5px;display:block;width:100%}
+      .sidebar,.content{border-radius:5px;display:block;width:100%; padding:10px}
       .sidebar{height:auto;margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
       .header {border:none}
@@ -90,6 +90,7 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
+	        .sidebar,.content{padding:10px}
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       .avatar{display:none}
       }
