--- a/mikrotik-port-forward-generator.html
+++ b/mikrotik-port-forward-generator.html
@@ -37,8 +37,8 @@
       #wrap{max-width:900px;margin:0 auto;padding:0 5px}
       .header{height:auto;width:100%;margin-top:0;margin-bottom:10px;border-top:1px solid #555}
       .main-wrap{background-color:#f60}
-      .content{width:100%;height:auto;;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd}
-      .sidebar{width:100%;height:auto;;padding:15px;background-color:#ccc;border:2px solid #ccc;border-radius:5px;margin-top:5px}
+      .content{width:100%;height:auto;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd}
+      .sidebar{width:100%;height:auto;padding:15px;background-color:#ccc;border:2px solid #ccc;border-radius:5px;margin-top:5px}
       .footer{font-size:13px;padding-top:10px;padding-bottom:15px;text-align:center;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#ddd;font-size:20px;margin-bottom:10px;margin-top:10px}
@@ -54,7 +54,7 @@
       input[type=submit]{background-color:#f60;color:#fff;padding:3px;border:none;border-radius:5px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
       .row:after{content:"";display:table;clear:both}
-      .list-output-content{height:425px;background:#f9f9f9;overflow:auto;overflow-x:auto;width:auto;padding:4px;margin-top:0;border:1px solid #bbb;border-radius:5px}
+      .list-output-content{height:auto;background:#f9f9f9;overflow:auto;overflow-x:auto;width:auto;padding:4px;margin-top:0;border:1px solid #bbb;border-radius:5px}
       table,tr,td{border:none}
       table{font-family:arial,sans-serif;border-collapse:collapse;width:100%;min-width:620px}
       td,th{border:1px solid #ccc;text-align:left;padding:6px;font-weight:400}
