--- a/mikrotik-port-forward-generator.html
+++ b/mikrotik-port-forward-generator.html
@@ -54,7 +54,7 @@
       input[type=submit]{background-color:#f60;color:#fff;padding:3px;border:none;border-radius:5px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
       .row:after{content:"";display:table;clear:both}
-      .list-output-content{height:auto;background:#f9f9f9;overflow:auto;overflow-x:auto;width:auto;padding:4px;margin-top:0;border:1px solid #bbb;border-radius:5px}
+      .list-output-content{height:auto;min-height:300px;background:#f9f9f9;overflow:auto;overflow-x:auto;width:auto;padding:4px;margin-top:0;border:1px solid #bbb;border-radius:5px}
       table,tr,td{border:none}
       table{font-family:arial,sans-serif;border-collapse:collapse;width:100%;min-width:620px}
       td,th{border:1px solid #ccc;text-align:left;padding:6px;font-weight:400}
