--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -38,8 +38,8 @@
       #wrap{max-width:1024px;margin:0 auto;padding:0 5px}
       .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555}
       .main-wrap{display:flex}
-      .content{flex:1;float:right;width:55%;padding:10px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;height:auto;border-radius:0 5px 5px 0}
-      .sidebar{float:left;width:45%;background-color:#ddd;border:1px solid #bbb;height:auto;border-radius:5px 0 0 5px;padding:10px 10px 20px}
+      .content{flex:1;float:right;width:55%;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;height:auto;border-radius:0 5px 5px 0}
+      .sidebar{float:left;width:45%;background-color:#ddd;border:1px solid #bbb;height:auto;border-radius:5px 0 0 5px;padding:15px}
       label{padding:5px 0 0;display:inline-block}
       .footer{font-size:13px;padding-top:10px;padding-bottom:15px;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
@@ -58,7 +58,7 @@
       @media screen and (max-width:800px) {
       .list-output-content{height:auto}
       .main-wrap{display:block}
-      .sidebar,.content{border-radius:5px;display:block;width:100%}
+      .sidebar,.content{border-radius:5px;display:block;width:100%; 10px}
       .sidebar{height:auto;margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
       .header{border:none}
@@ -83,6 +83,7 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
+	  .sidebar, .content{padding:5px}	
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       .avatar{display:none}
       .sidebar{font-size:12px}
