--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -37,8 +37,8 @@
       .logo a{color:#ddd!important;text-decoration:none!important}
       .header{height:auto;width:100%;margin-top:5px;margin-bottom:10px;border-top:1px solid #555;margin-top:5px}
       .main-wrap{display:flex}
-      .content{flex:1;float:right;width:65%;padding:10px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;height:auto;border-radius:0 5px 5px 0}
-      .sidebar{float:left;width:35%;padding:10px;background-color:#ddd;border:1px solid #bbb;height:auto;border-radius:5px 0 0 5px}
+      .content{flex:1;float:right;width:65%;padding:15px;border-top:1px solid #bbb;border-bottom:1px solid #bbb;border-right:1px solid #bbb;background:#ddd;height:auto;border-radius:0 5px 5px 0}
+      .sidebar{float:left;width:35%;padding:15px;background-color:#ddd;border:1px solid #bbb;height:auto;border-radius:5px 0 0 5px}
       .footer{font-size:13px;padding-top:10px;padding-bottom:15px;clear:both;width:auto;color:#ddd}
       h2{color:#f60}
       h1{color:#ddd;font-size:25px;margin-bottom:5px;margin-top:10px}
@@ -58,12 +58,13 @@
       input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right}
       input[type=submit]:hover{background-color:#45a049}
       .list-output-content{height:300px;background:#fff;overflow:auto;overflow-x:auto;width:100%;padding:4px;margin-top:8px;border:1px solid #ccc;border-radius:5px}
-      .list-output-content2{height:300px;background-color:#f60;overflow:auto;overflow-x:auto;width:100%;padding:20px;margin-top:8px;border:2px solid #fff;color:#fff;font-family:montserrat,sans-serif;border-radius:5px}
+      .list-output-content2{height:auto;background-color:#f60;overflow:auto;overflow-x:auto;width:100%;padding:20px;margin-top:8px;border:2px solid #fff;color:#fff;font-family:montserrat,sans-serif;border-radius:5px}
       .mikrotik-logo{display:none}
       @media screen and (max-width:700px) {
       .list-output-content{height:auto}
+	  .list-output-content2{height:auto}
       .main-wrap{display:block}
-      .sidebar,.content{border-radius:5px;display:block;width:100%}
+      .sidebar,.content{border-radius:5px;display:block;width:100%;padding:10px}
       .sidebar{height:auto;margin-bottom:5px}
       .header h1{max-width:100%;justify-content:center}
       .header{border:none}
@@ -88,6 +89,7 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
+	  .sidebar, .content{padding:5px}		  
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       .avatar{display:none}
       }
@@ -216,7 +218,6 @@
               <span id="msg-contact" style="color:#fff; font-weight:bold; font-size:15px;;line-height:2.0">Contact Owner: +62 813-2222-3333</span><br>
             </div>
           </div>
-          <br>
         </div>
       </div>
       <div class="footer">
