--- a/mikrotik-failover-script-generator.html
+++ b/mikrotik-failover-script-generator.html
@@ -72,7 +72,7 @@
       .footer{font-size:13px;padding-left:5px;padding-right:5px}
       }
       @media screen and (max-width:600px) {
-      button{margin-bottom:5px}
+      button{margin-bottom:5px; width:100px; padding:7px}
       h1{font-size:19px}
       .logo-left a{margin-top:10px!important;font-size:20px}
       .logo-left img{height:auto;width:40px;margin-top:-5px!important}
