--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -89,10 +89,11 @@
       .mymenu ul{background:none!important;justify-content:center;display:flex}
       }
       @media screen and (max-width:500px) {
+	        .sidebar,.content{padding:2px}	
       .show-homepage-menu{display:flex;justify-content:center;width:100%}
       .avatar{display:none}
       .routeros{width:100%}
-        table,tr,td {padding:0; margin:0; font-size:12px}
+        table,tr,td,th {padding:0; margin:0; font-size:12px !important}
       }
       @media screen and (max-width:350px) {
       .hide-homepage{display:none}
@@ -147,7 +148,7 @@
       </div>
       <div class="sidebar">
         <h1>ADVANCED MIKROTIK ROUTER-OS PROTECTION</h1>
-        <span style="color:red; font-weight:bold; font-size:20px;">Disclaimer!</span> We are not responsible for errors or damage or your router is
+        <span style="color:red; font-weight:bold; font-size:16px;">Disclaimer!</span> We are not responsible for errors or damage or your router is
         locked due to deliberate or accidental factors, you should ask for help from a friend who understands trying it.    
         <br>  <br>  
         <table>
