--- a/wifid-wms-seamless.html
+++ b/wifid-wms-seamless.html
@@ -42,6 +42,7 @@
       .content{float:right;width:70%;padding:15px;border-top:1px solid #ccc;border-bottom:1px solid #ccc;border-right:1px solid #ccc;background:#eee;height:auto;border-radius:0 5px 5px 0;font-size:14px}
       .sidebar{float:left;width:30%;background-color:#eee;border:1px solid #ccc;height:auto;border-radius:5px 0 0 5px;font-size:15px;padding:15px}
       .footer{padding-top:15px;padding-bottom:20px;clear:both;width:auto;font-size:13px;color:#ddd}
+	  label {font-weight:600; font-size:15px;}
       h2{color:#f60}
       h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:10px}
       a:link{color:#f60}
@@ -195,7 +196,7 @@
           <br>
         </div>
         <div class="content">
-          <span style="margin-left:2px">Script Generator Results</span>
+          <span style="margin-left:2px;font-weight:600">Script Generator Results</span>
           <div class="list-output-content">
             <table id="showScript" style="padding:5px;">
               <tr>
